Enhance create_adset function for mobile app campaigns
- Added support for promoted_object and destination_type parameters in create_adset function to facilitate mobile app adset creation.
- Implemented validation for required fields in promoted_object and destination_type, ensuring proper error handling for missing or invalid inputs.
- Introduced comprehensive unit tests to validate the new functionality and error handling scenarios.
- Updated pyproject.toml to include pytest markers for end-to-end tests related to mobile app adset creation.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,3 +39,11 @@ meta-ads-mcp = "meta_ads_mcp:entrypoint"
 
 [tool.hatch.build.targets.wheel]
 packages = ["meta_ads_mcp"]
+
+[tool.pytest.ini_options]
+markers = [
+    "e2e: marks tests as end-to-end (requires running MCP server) - excluded from default runs",
+]
+addopts = "-v --strict-markers -m 'not e2e'"
+testpaths = ["tests"]
+asyncio_mode = "auto"
