Update license from Apache 2.0 to Business Source License 1.1
- Replaced the Apache License with the Business Source License 1.1 in LICENSE file.
- Updated license information in pyproject.toml to reflect the new licensing terms.
- Adjusted license classifiers to align with the new license type.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,10 @@ authors = [
     {name = "Yves Junqueira", email = "yves.junqueira@gmail.com"},
 ]
 keywords = ["meta", "facebook", "ads", "api", "mcp", "claude"]
-license = {text = "Apache-2.0"}
+license = {text = "BUSL-1.1"}
 classifiers = [
     "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: Apache Software License",
+    "License :: Other/Proprietary License",
     "Operating System :: OS Independent",
 ]
 dependencies = [
