Add streamable-http remote configuration to smithery.yaml
- Introduced a new remote of type 'streamable-http' with the specified URL for MCP integration.
- Ensured proper formatting by adding a newline at the end of the file.

--- a/smithery.yaml
+++ b/smithery.yaml
@@ -31,3 +31,6 @@ startCommand:
         env: env
       };
     } 
+remotes:
+  - type: streamable-http
+    url: "https://mcp.pipeboard.co/meta-ads-mcp"
