--- a/.github/workflows/publish-mcp.yml
+++ b/.github/workflows/publish-mcp.yml
@@ -1,8 +1,9 @@
-name: Publish to MCP Registry
+name: Publish to MCP Registry (manual)
 
 on:
-  release:
-    types: [published]
+  # This workflow is kept for manual runs only. The normal release flow
+  # is handled by the consolidated release workflow.
+  workflow_dispatch:
 
 jobs:
   publish:
@@ -13,45 +14,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v5
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.12"
-
-      - name: Install uv
-        uses: astral-sh/setup-uv@v5
-
-      - name: Install dependencies
-        run: |
-          uv sync --all-extras --dev
-
-      - name: Run tests
-        run: |
-          uv run pytest -q
-
-      - name: Build wheel
-        run: |
-          uv build
-
-      - name: Validate server.json against schema
-        run: |
-          uv run python - <<'PY'
-          import json, sys, urllib.request
-          from jsonschema import validate
-          from jsonschema.exceptions import ValidationError
-          server = json.load(open('server.json'))
-          schema_url = server.get('$schema')
-          with urllib.request.urlopen(schema_url) as r:
-              schema = json.load(r)
-          try:
-              validate(instance=server, schema=schema)
-          except ValidationError as e:
-              print('Schema validation failed:', e, file=sys.stderr)
-              sys.exit(1)
-          print('server.json is valid')
-          PY
+        uses: actions/checkout@v4
 
       - name: Install MCP Publisher
         run: |
@@ -59,7 +22,6 @@ jobs:
 
       - name: Login to MCP Registry (DNS auth)
         run: |
-          # Extract private key using official MCP publisher method
           echo "${{ secrets.MCP_PRIVATE_KEY }}" > temp_key.pem
           PRIVATE_KEY_HEX=$(openssl pkey -in temp_key.pem -noout -text | grep -A3 "priv:" | tail -n +2 | tr -d ' :\n')
           ./mcp-publisher login dns --domain pipeboard.co --private-key "$PRIVATE_KEY_HEX"
