--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "hatchling.build"
 [project]
 name = "meta-ads-mcp"
 version = "1.0.16"
-description = "Model Context Protocol (MCP) server for interacting with Meta Ads API"
+description = "Model Context Protocol (MCP) server for Meta Ads - Use Remote MCP at pipeboard.co for easiest setup"
 readme = "README.md"
 requires-python = ">=3.10"
 authors = [
